--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-	<meta charset="utf-8" />
+	<meta charset="utf-8">
 	<title>Les intégristes – code</title>
+	<link rel="stylesheet" href="assets/code.css">
 </head>
 <body>
 	<h1>Les intégristes – code</h1>
+	<ul>
+		<li>
+			<a href="placeholder/">L’attribut placeholder sur OS X et iOS, comme autrefois.</a>
+		</li>
+	</ul>
 </body>
 </html>
