Animation direction demo

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 <body>
 	<h1>Les intégristes – code</h1>
 	<ul>
-		<li>
-			<a href="placeholder/">L’attribut placeholder sur OS X et iOS, comme autrefois.</a>
-		</li>
+		<li><a href="placeholder/">L’attribut placeholder sur OS X et iOS, comme autrefois.</a></li>
+		<li><a href="animation-direction/">La propriété animation-direction</a></li>
 	</ul>
 </body>
 </html>
